create interface page for clothing page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,173 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Urban Style - Fashion Store</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="header-content">
+            <div class="logo">URBAN STYLE</div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#men">Men</a></li>
+                    <li><a href="#women">Women</a></li>
+                    <li><a href="#sale">Sale</a></li>
+                    <li><a href="#cart">Cart (0)</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <section class="hero">
+        <div class="hero-content">
+            <h1>New Collection 2025</h1>
+            <p>Discover the latest trends in fashion</p>
+            <a href="#shop" class="btn">Shop Now</a>
+        </div>
+    </section>
+
+    <section class="container">
+        <h2 class="section-title">Featured Products</h2>
+        
+        <div class="products-grid">
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);">
+                    <span class="badge">New</span>
+                </div>
+                <div class="product-info">
+                    <h3>Classic Denim Jacket</h3>
+                    <p class="category">Men's Outerwear</p>
+                    <div class="price-cart">
+                        <span class="price">$89.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);">
+                    <span class="badge sale">Sale</span>
+                </div>
+                <div class="product-info">
+                    <h3>Floral Summer Dress</h3>
+                    <p class="category">Women's Dresses</p>
+                    <div class="price-cart">
+                        <span class="price"><s>$79.99</s> $59.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);">
+                </div>
+                <div class="product-info">
+                    <h3>Cotton T-Shirt Pack</h3>
+                    <p class="category">Essentials</p>
+                    <div class="price-cart">
+                        <span class="price">$29.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #43e97b 0%, #38f9d7 100%);">
+                    <span class="badge">New</span>
+                </div>
+                <div class="product-info">
+                    <h3>Athletic Joggers</h3>
+                    <p class="category">Activewear</p>
+                    <div class="price-cart">
+                        <span class="price">$49.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%);">
+                </div>
+                <div class="product-info">
+                    <h3>Leather Handbag</h3>
+                    <p class="category">Accessories</p>
+                    <div class="price-cart">
+                        <span class="price">$129.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image" style="background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);">
+                    <span class="badge sale">-30%</span>
+                </div>
+                <div class="product-info">
+                    <h3>Winter Coat</h3>
+                    <p class="category">Outerwear</p>
+                    <div class="price-cart">
+                        <span class="price"><s>$199.99</s> $139.99</span>
+                        <button class="add-to-cart">Add to Cart</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="categories">
+        <h2 class="section-title">Shop by Category</h2>
+        <div class="category-grid">
+            <div class="category-card">
+                <h3>Men's Fashion</h3>
+                <p>Explore Collection →</p>
+            </div>
+            <div class="category-card">
+                <h3>Women's Fashion</h3>
+                <p>Explore Collection →</p>
+            </div>
+            <div class="category-card">
+                <h3>Accessories</h3>
+                <p>Explore Collection →</p>
+            </div>
+            <div class="category-card">
+                <h3>Sports & Active</h3>
+                <p>Explore Collection →</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>About Us</h4>
+                <p>Urban Style brings you the latest fashion trends at affordable prices.</p>
+            </div>
+            <div class="footer-section">
+                <h4>Customer Service</h4>
+                <ul>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Shipping Info</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>Follow Us</h4>
+                <ul>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Pinterest</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Urban Style. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
